--- a/src/config.ini
+++ b/src/config.ini
@@ -1,12 +1,12 @@
 # in seconds
 interval = 2
-debug = true
+debug = false
 
 output = elasticsearch,file
 
 [elasticsearch]
 url = http://elastics.quotix.io:9200
-debug = true
+debug = false
 
 [file]
 path = /var/log/tcptracer/output.log
